--- a/idex.html
+++ b/idex.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
 <html>
-<head><title>임준원의 Github입니다!</title></head>
 <body>
-<hr>
-<iframe src="file:///C:/Users/jwony/OneDrive/%EB%B0%94%ED%83%95%20%ED%99%94%EB%A9%B4/github.html" name="left" width="300" height="500">	
-</iframe>
-<iframe src="file:///C:/Users/jwony/OneDrive/%EB%B0%94%ED%83%95%20%ED%99%94%EB%A9%B4/zz.html" name="right" width="600" height="500">	
-</iframe>
+<h1>Hello World</h1>
+<p>I'm hosted with Github Pages.</p>
 </body>
 </html>
