--- a/offline_shop.html
+++ b/offline_shop.html
@@ -1,45 +1,78 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>유니콘 Vaping</title>
+    <title>유니콘 vaping</title>
     <style>
+      /* 스타일 코드 */
       body {
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
       }
+
       header {
         background-color: #333;
         color: #fff;
-        padding: 1em;
+        padding: 20px;
         text-align: center;
       }
+
       nav {
-        background-color: #f2f2f2;
-        border: 1px solid #ccc;
-        display: flex;
-        justify-content: space-between;
-        padding: 1em;
+        background-color: #f4f4f4;
+        padding: 10px;
+        text-align: center;
       }
+
       nav a {
+        margin: 10px;
         color: #333;
         text-decoration: none;
-        margin-right: 1em;
+        font-weight: bold;
       }
+
       main {
+        padding: 20px;
+        text-align: center;
+      }
+
+      h1 {
+        margin: 0;
+        font-size: 28px;
+      }
+
+      h2 {
+        margin-bottom: 20px;
+        font-size: 24px;
+      }
+
+      .search-form {
         display: flex;
         justify-content: center;
-        align-items: center;
-        height: calc(100vh - 100px);
+        margin-bottom: 20px;
       }
-      main h2 {
-        font-size: 3em;
+
+      .search-form input[type="text"] {
+        padding: 10px;
+        width: 300px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 16px;
+      }
+
+      .search-form button[type="submit"] {
+        padding: 10px 20px;
+        background-color: #4CAF50;
+        border: none;
+        color: #fff;
+        border-radius: 4px;
+        font-size: 16px;
+        cursor: pointer;
       }
     </style>
   </head>
   <body>
     <header>
-      <h1>Vaping 오프라인 샵</h1>
+      <h1>오프라인 Vaping 매장</h1>
     </header>
     <nav>
       <a href="index.html">홈</a>
@@ -49,7 +82,20 @@
       <a href="offline_shop.html">오프라인 Vaping 매장</a>
     </nav>
     <main>
-      <h2>Vaping 오프라인 샵 맵 페이지입니다.</h2>
+      <h2>근처 매장을 검색해보세요!</h2>
+      <form id="searchForm" class="search-form">
+        <input type="text" id="searchInput" placeholder="지역을 검색하세요" />
+        <button type="submit">검색</button>
+      </form>
+      <script>
+        document.getElementById("searchForm").addEventListener("submit", function (event) {
+          event.preventDefault();
+          var searchKeyword = document.getElementById("searchInput").value;
+          var encodedKeyword = encodeURIComponent(searchKeyword + " 전자담배");
+          var searchURL = "https://search.naver.com/search.naver?query=" + encodedKeyword;
+          window.open(searchURL, "_blank");
+        });
+      </script>
     </main>
   </body>
 </html>
