--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<nav>
 		<a href="vaping_liquid.html">vaping 액상</a>
 		<a href="vaping_device.html">vaping 기기</a>
-		<a href="vaping_community.html">vaping 커뮤니티</a>
+		<a href="vaping_community.html">Vaping 기기/액상 후기</a>
 		<a href="offline_shop.html">오프라인 vaping shop</a>
 	</nav>
 
