--- a/vaping_liquid.html
+++ b/vaping_liquid.html
@@ -68,7 +68,7 @@
       <a href="index.html">홈</a>
       <a href="vaping_liquid.html">Vaping 액상</a>
       <a href="vaping_device.html">Vaping 기기</a>
-      <a href="vaping_community.html">Vaping 커뮤니티</a>
+      <a href="vaping_community.html">Vaping 기기/액상 후기</a>
       <a href="offline_shop.html">오프라인 Vaping Shop</a>
     </div>
     <div class="content">
