--- a/vaping_liquid.html
+++ b/vaping_liquid.html
@@ -77,21 +77,78 @@
         <img src="liquid1.png" alt="blvk 스피아민트">
         <h3>blvk 스피아민트</h3>
         <p>인위적인 쿨링이 아닌 시원함과 깔끔하고 달지 않은 스피아민트 맛</p>
+        리뷰의 평점:4.6점 (11건)<progress value="4.6" max="5"></progress>
+        단맛(1.1)<progress value="1.1"max="5"></progress>
+        멘솔(1.9)<progress value="1.9" max="5"></progress>
+        목긁음(3.7)<progress value="3.7" max="5"></progress>
+        바디감(1.1)<progress value="1.1" max="5"></progress>
+        상큼함(0.6)<progress value="0.6" max="5"></progress>
       </div>
       <div class="liquid">
         <img src="liquid2.png" alt="Flex 피치 엔딩">
         <h3>Flex 피치 엔딩</h3>
         <p>아이스티 복숭아 맛</p>
+        리뷰의 평점:3.5점 (96건)<progress value="3.5" max="5"></progress>
+        단맛(3.2)<progress value="3.2"max="5"></progress>
+        멘솔(2.6)<progress value="2.6" max="5"></progress>
+        목긁음(0.9)<progress value="0.9" max="5"></progress>
+        바디감(1.4)<progress value="1.4" max="5"></progress>
+        상큼함(2.8)<progress value="2.8" max="5"></progress>
       </div>
       <div class="liquid">
         <img src="liquid3.png" alt="레드 애플">
         <h3>7Daze 레드 애플</h3>
         <p>시원하고 상쾌한 사과 주스 맛</p>
+        리뷰의 평점:2.1점 (91건)<progress value="2.1" max="5"></progress>
+        단맛(2.4)<progress value="2.4"max="5"></progress>
+        멘솔(2.0)<progress value="2.0" max="5"></progress>
+        목긁음(1.7)<progress value="1.7" max="5"></progress>
+        바디감(1.1)<progress value="1.1" max="5"></progress>
+        상큼함(2.1)<progress value="2.1" max="5"></progress>
       </div>
       <div class="liquid">
         <img src="liquid4.png" alt="동경 바나나">
         <h3>동경 바나나</h3>
         <p>도쿄 바나나 빵 맛</p>
+        리뷰의 평점:3.8점 (68건)<progress value="3.8" max="5"></progress>
+        단맛(3.5)<progress value="3.5"max="5"></progress>
+        멘솔(1.4)<progress value="1.4" max="5"></progress>
+        목긁음(0.8)<progress value="0.8" max="5"></progress>
+        바디감(2.8)<progress value="2.8" max="5"></progress>
+        상큼함(0.4)<progress value="0.4" max="5"></progress>
+      </div>
+      <div class="liquid">
+        <img src="liquid5.png" alt="돔페 바닐라 민트 솔트">
+        <h3>돔페 바닐라 민트 솔트</h3>
+        <p>바닐라에 멘솔감 있는 맛</p>
+        리뷰의 평점:3.0점 (3건)<progress value="3" max="5"></progress>
+        단맛(3.0)<progress value="3"max="5"></progress>
+        멘솔(2.7)<progress value="2.7" max="5"></progress>
+        목긁음(1.7)<progress value="1.7" max="5"></progress>
+        바디감(2.3)<progress value="2.3" max="5"></progress>
+        상큼함(0.3)<progress value="0.3" max="5"></progress>
+      </div>
+      <div class="liquid">
+        <img src="liquid6.png" alt="네스티 쿠쉬맨">
+        <h3>네스티 쿠쉬맨</h3>
+        <p>깔끔하고 진한 망고맛</p>
+        리뷰의 평점:5.0점 (1건)<progress value="5" max="5"></progress>
+        단맛(3.0)<progress value="3"max="5"></progress>
+        멘솔(2.0)<progress value="2.0" max="5"></progress>
+        목긁음(1.0)<progress value="1.0" max="5"></progress>
+        바디감(1.0)<progress value="1.0" max="5"></progress>
+        상큼함(1.0)<progress value="1.0" max="5"></progress>
+      </div>
+      <div class="liquid">
+        <img src="liquid7.png" alt="모코 하와이">
+        <h3>모코 하와이</h3>
+        <p>블루에이드+라임 비타민레몬 맛</p>
+        리뷰의 평점:3.0점 (50건)<progress value="3" max="5"></progress>
+        단맛(0.7)<progress value="0.7"max="5"></progress>
+        멘솔(4.4)<progress value="4.4" max="5"></progress>
+        목긁음(1.5)<progress value="1.5" max="5"></progress>
+        바디감(0.8)<progress value="0.8" max="5"></progress>
+        상큼함(3.3)<progress value="3.3" max="5"></progress>
       </div>
     </div>
   </body>
