--- a/vaping_device.html
+++ b/vaping_device.html
@@ -93,6 +93,11 @@
         <h3>유웰 하보크</h3>
         <p>액상용량 4ml, 콤팩트한 디자인, 우수한 성능, 월등한 코일 수명</p>
       </div>
+      <div class="device">
+        <img src="device5.png" alt="몬스터즈 아스몬">
+        <h3>몬스터즈 아스몬</h3>
+        <p>풍부하고 선명한 표현력, V3 공팟, 8겹 유기농 코튼 코일</p>
+      </div>
     </div>
   </body>
 </html>
