--- a/index.html
+++ b/index.html
@@ -1,61 +1,108 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
-	<meta charset="utf-8">
-	<title>유니콘 Vaping</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Unicon Vaping</title>
 	<style>
-		body {
+		*{
 			margin: 0;
 			padding: 0;
+			box-sizing: border-box;
 		}
-
-		header {
-			background-color: #F2F2F2;
-			text-align: center;
-			padding: 20px;
+		.container{
+			width:100%;
+			height:100vh;
+			background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(homepage.jpg);
 		}
-
-		nav {
-			background-color: #333;
-			overflow: hidden;
+		.container .header{
+			width: 80%;
+			height: 80px;
+			margin: 0 auto;
 			display: flex;
-			justify-content: space-around;
-			padding: 10px;
+			justify-content: space-between;
+			align-items: center;
 		}
 
-		nav a {
-			color: white;
+		.container .header h1 a{
 			text-decoration: none;
-			font-size: 20px;
-			font-weight: bold;
-			padding: 10px;
+			color: white;
 		}
 
-		nav a:hover {
-			background-color: #4CAF50;
-			border-radius: 5px;
+		.container .nav ul li{
+			display: inline-block;
+			margin: 0 10px;
 		}
 
-		h1 {
-			font-size: 40px;
-			font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-			color: #333;
-			margin-top: 50px;
+		.container .nav ul li a{
+			text-decoration: none;
+			color: white;
+		}
+
+		.container .nav ul li a:hover{
+			color: #1fdfdf;
+		}
+
+		.container .hero {
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%,-50%);
+			color: white;
 			text-align: center;
+			font-family: Verdana, Geneva, Tahoma, sans-serif;
 		}
+
+		.container .hero h2{
+			font-size: 60px;
+			margin-bottom: 20px;
+		}
+
+		.container .hero p{
+			font-size: 22px;
+		}
+
+		.container .hero button{
+			background: none;
+			border: 2px solid darkseagreen;
+			color: white;
+			padding: 15px 20px;
+			border-radius: 20px;
+			margin-top: 30px;
+			outline: none;
+			cursor: pointer;
+			transition: all .4s;
+		}
+		.container .hero button a{
+			text-decoration: none;
+			color: white;
+		}
+
+
+		.container .hero button:hover{
+			background-color: darkslategray;
+		}
+
 	</style>
 </head>
 <body>
-	<header>
-		<h1>유니콘 vaping</h1>
-	</header>
-
-	<nav>
-		<a href="vaping_liquid.html">vaping 액상</a>
-		<a href="vaping_device.html">vaping 기기</a>
-		<a href="vaping_community.html">Vaping 기기/액상 후기</a>
-		<a href="offline_shop.html">오프라인 vaping shop</a>
-	</nav>
+	<div class="container">
+		<div class="header">
+			<h1><a href="#">Unicon Vaping</a></h1>
+			<div class="nav">
+				<ul>
+					<li><a href="vaping_liquid.html">Vaping 액상</a></li>
+					<li><a href="vaping_device.html">Vaping 기기</a></li>
+					<li><a href="vaping_community.html">Vaping 액상/기기 후기</a></li>
+					<li><a href="offline_shop.html">오프라인 vaping shop</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="hero">
+			<h2>Find your vaping style</h2>
+			<p>전자담배의 액상과 기기의 정보를 찾아보세요.<br>그리고 후기를 나눠보세요!</p>
+			<button><a href="offline_shop.html">Find offline shop</a></button>
+	</div>
 
 	<script>
 		// 각각의 메뉴를 클릭하면 해당하는 페이지로 이동
