--- a/offline_shop.html
+++ b/offline_shop.html
@@ -1,101 +1,120 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
-    <title>유니콘 vaping</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Unicon Vaping</title>
     <style>
-      /* 스타일 코드 */
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-      }
+    	*{
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+		}
+		.container{
+			width:100%;
+			height:100vh;
+			background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(homepage.jpg);
+		}
+		.container .header{
+			width: 80%;
+			height: 80px;
+			margin: 0 auto;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+		}
 
-      header {
-        background-color: #333;
-        color: #fff;
-        padding: 20px;
-        text-align: center;
-      }
+		.container .header h1 a{
+			text-decoration: none;
+			color: white;
+		}
 
-      nav {
-        background-color: #f4f4f4;
-        padding: 10px;
-        text-align: center;
-      }
+		.container .nav ul li{
+			display: inline-block;
+			margin: 0 10px;
+		}
 
-      nav a {
-        margin: 10px;
-        color: #333;
-        text-decoration: none;
-        font-weight: bold;
-      }
+		.container .nav ul li a{
+			text-decoration: none;
+			color: white;
+		}
 
-      main {
-        padding: 20px;
-        text-align: center;
-      }
+		.container .nav ul li a:hover{
+			color: #1fdfdf;
+		}
 
-      h1 {
-        margin: 0;
-        font-size: 28px;
-      }
+		.container .hero {
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%,-50%);
+			color: white;
+			text-align: center;
+			font-family: Verdana, Geneva, Tahoma, sans-serif;
+		}
 
-      h2 {
-        margin-bottom: 20px;
-        font-size: 24px;
-      }
+		.container .hero h2{
+			font-size: 60px;
+			margin-bottom: 20px;
+		}
 
-      .search-form {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 20px;
-      }
+		.container .hero p{
+			font-size: 22px;
+		}
 
-      .search-form input[type="text"] {
-        padding: 10px;
-        width: 300px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        font-size: 16px;
-      }
+    .container .hero form {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
 
-      .search-form button[type="submit"] {
-        padding: 10px 20px;
-        background-color: #4CAF50;
-        border: none;
-        color: #fff;
-        border-radius: 4px;
-        font-size: 16px;
-        cursor: pointer;
-      }
+    .container .hero input {
+      padding: 10px;
+      width: 300px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 16px;
+    }
+
+    .container .hero button {
+      padding: 10px 20px;
+      background-color: #4CAF50;
+      border: none;
+      color: #fff;
+      border-radius: 4px;
+      font-size: 16px;
+      cursor: pointer;
+    }
     </style>
   </head>
   <body>
-    <header>
-      <h1>오프라인 Vaping 매장</h1>
-    </header>
-    <nav>
-      <a href="index.html">홈</a>
-      <a href="vaping_liquid.html">Vaping 액상</a>
-      <a href="vaping_device.html">Vaping 기기</a>
-      <a href="vaping_community.html">Vaping 기기/액상 후기</a>
-      <a href="offline_shop.html">오프라인 Vaping 매장</a>
-    </nav>
-    <main>
-      <h2>근처 매장을 검색해보세요!</h2>
-      <form id="searchForm" class="search-form">
-        <input type="text" id="searchInput" placeholder="지역을 검색하세요" />
-        <button type="submit">검색</button>
-      </form>
-      <script>
-        document.getElementById("searchForm").addEventListener("submit", function (event) {
-          event.preventDefault();
-          var searchKeyword = document.getElementById("searchInput").value;
-          var encodedKeyword = encodeURIComponent(searchKeyword + " 전자담배");
-          var searchURL = "https://search.naver.com/search.naver?query=" + encodedKeyword;
-          window.open(searchURL, "_blank");
-        });
-      </script>
-    </main>
+ 	<div class="container">
+		<div class="header">
+			<h1><a href="#">Unicon Vaping</a></h1>
+			<div class="nav">
+				<ul>
+					<li><a href="index.html">홈</a></li>
+					<li><a href="vaping_liquid.html">Vaping 액상</a></li>
+					<li><a href="vaping_device.html">Vaping 기기</a></li>
+					<li><a href="vaping_community.html">Vaping 액상/기기 후기</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="hero">
+			<h2>근처 매장을 검색해보세요!</h2>
+      		<form id="searchForm" class="search-form">
+        	<input type="text" id="searchInput" placeholder="지역을 검색하세요" />
+        	<button type="submit">검색</button>
+      		</form>
+      	<script>
+        	document.getElementById("searchForm").addEventListener("submit", function (event) {
+          	event.preventDefault();
+          	var searchKeyword = document.getElementById("searchInput").value;
+          	var encodedKeyword = encodeURIComponent(searchKeyword + " 전자담배");
+          	var searchURL = "https://search.naver.com/search.naver?query=" + encodedKeyword;
+            window.open(searchURL, "_blank");
+        	});
+      	</script>
+    	</div>
   </body>
 </html>
