--- a/vaping_liquid.html
+++ b/vaping_liquid.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>유니콘 vaping</title>
+    <title>Unicon Vaping</title>
     <meta charset="utf-8">
     <style>
       body {
@@ -62,10 +62,10 @@
   </head>
   <body>
     <div class="header">
-      <h1>유니콘 vaping</h1>
+      <h1>Unicon Vaping</h1>
     </div>
     <div class="menu">
-      <a href="index.html">홈</a>
+      <a href="index.html">Home</a>
       <a href="vaping_liquid.html">Vaping 액상</a>
       <a href="vaping_device.html">Vaping 기기</a>
       <a href="vaping_community.html">Vaping 기기/액상 후기</a>
