--- a/vaping_liquid.html
+++ b/vaping_liquid.html
@@ -65,7 +65,7 @@
       <h1>Unicon Vaping</h1>
     </div>
     <div class="menu">
-      <a href="index.html">Home</a>
+      <a href="index.html">홈</a>
       <a href="vaping_liquid.html">Vaping 액상</a>
       <a href="vaping_device.html">Vaping 기기</a>
       <a href="vaping_community.html">Vaping 기기/액상 후기</a>
