--- a/offline_shop.html
+++ b/offline_shop.html
@@ -97,6 +97,7 @@
 					<li><a href="vaping_liquid.html">Vaping 액상</a></li>
 					<li><a href="vaping_device.html">Vaping 기기</a></li>
 					<li><a href="vaping_community.html">Vaping 액상/기기 후기</a></li>
+					<li><a href="offline_shop.html">오프라인 vaping shop</a></li>
 				</ul>
 			</div>
 		</div>
