--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 			<h1><a href="#">Unicon Vaping</a></h1>
 			<div class="nav">
 				<ul>
+					<li><a href="index.html">홈</a></li>
 					<li><a href="vaping_liquid.html">Vaping 액상</a></li>
 					<li><a href="vaping_device.html">Vaping 기기</a></li>
 					<li><a href="vaping_community.html">Vaping 액상/기기 후기</a></li>
